/*
 * $Id: ChangeLog,v 1.2152 2004/01/27 03:26:26 fsgiudice Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-01-27 04:39 UTC+0100 Francesco Saverio Giudice <info@fsgiudice.com>
  * hrbdll.bc
    * fixed build, missed to update a section.

2004-01-27 04:19 UTC+0100 Francesco Saverio Giudice <info@fsgiudice.com>
  + tests/tbrowse.prg
  + tests/tbcolumn.prg
  + tests/tstbrwdb.prg
    New Tbrowse class

    /*
    I've completly rewrote from scratch the TBrowse class, it is based on Virtual Screen
    as reported from Hannes Ziegler in his TBMORE.TXT (thanks to him and to Andi for the suggest)
    but it is NOT binary compatible for choice, because i've adopted the xHarbour enhancements.
    It's a work in progress !
    There are a lot of fixes that i have to do.
    Actually are not implemented some functionality like colors and panning.
    To test it you can do:

    bldtest tstbrwdb tbrowse tbcolumn  (to test the new tbrowse)
    or
    bldtest tstbrwdb                   (to test with the current tbrowse)

    I hope you like it.
    Francesco
    */

2004-01-26 19:11 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbapigt.h
  * source/rtl/gtapi.c
    * Corrected HB_EXPORT qualifier to precede complex type in function declarations/definitions

2004-01-26 18:55 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/dynsym.c
  * include/thread.h
  * include/hbapi.h
    -+ Moved definition of DYNHB_ITEM to hbapi

  * include/hbapi.h
  * source/vm/dynsym.c
    + HB_EXPORT PDYNHB_ITEM hb_dynsymItems( void );
    + HB_EXPORT USHORT    * hb_dynsymCount( void );

  * source/rtl/terror.prg
    + Added logic to intercept and stop recusrive errors.

  * source/vm/classes.c
    % Optimized __CLS_PARAM()

  * source/rtl/inkey.c
  * source/rtl/set.c
  * source/vm/dynsym.c
  * source/vm/errorapi.c
  * source/vm/fm.c