@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2152 2004/01/27 03:26:26 fsgiudice Exp $
+ * $Id: ChangeLog,v 1.2153 2004/01/27 03:40:27 fsgiudice Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-01-26 20:08 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * source/vm/classes.c
+    * Fixed typo to recent optimization of __CLS_PARAM()
 
 2004-01-27 04:39 UTC+0100 Francesco Saverio Giudice <info@fsgiudice.com>
   * hrbdll.bc
